Add styling for VEuPathDB logo (currently "hidden")

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -146,21 +146,23 @@ body.vpdb-Body {
       }
     }
 
-    &.VEuPathDB {
+    &.VEuPathDB, &.EuPathDB {
       .vpdb-Header {
-        background-color: slategray;
+        background-image: url('~site/images/VEuPathDB/veupathdb-banner.jpg');
+        background-size: cover;
 
         .ebrc-HeaderBranding {
           position: relative;
-          bottom: 10px;
-          height: 72px;
-          content: url('~site/images/VEuPathDB/title_s.png');
+          bottom: 20px;
+          height: calc(72px * 1.2);
+          content: url('~site/images/VEuPathDB/veupath-logo-long.png');
         }
 
         &__collapsed {
           .ebrc-HeaderBranding {
             bottom: 0px;
-            height: 48px;
+            height: calc(48px * 1.15);
+            content: url('~site/images/VEuPathDB/veupath-logo-no-tag.png');
           }
         }
       }
