--- a/Site/webapp/wdkCustomization/js/client/components/homepage/PageDescription.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/PageDescription.scss
@@ -5,7 +5,7 @@
     font-weight: bold;
   }
 
-  .VEuPathDB {
+  .VEuPathDB, .EuPathDB {
     .vpdb-PageDescriptionHeader {
       display: flex;
       justify-content: space-between;
