--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -147,6 +147,11 @@ body.vpdb-Body {
             height: calc(48px * 1.15);
           }
         }
+
+        @media screen and (max-width: 1000px) {
+          background-image: none;
+          background-color: #682039;
+        }
       }
     }
 
