--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -2,6 +2,10 @@ body.vpdb-Body {
   background-image: unset;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 
+  // FIXME: Find sensible values for these
+  min-width: unset;
+  width: unset;
+
   .vpdb-RootContainer {
 
     display: grid;
