Modest tweaks to header size; use em instead of rem for grid column widths

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -218,7 +218,7 @@ body.vpdb-Body {
         "nav content side"
         "footer footer footer";
     
-      grid-template-columns: 18.75rem 1fr 18.75rem;
+      grid-template-columns: 26em 1fr 26em;
       grid-template-rows: 9.0625rem 1fr auto;
 
       .vpdb-Main {
