--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -2,14 +2,15 @@
   color: #00304c;
   
   h3 {
-    font-size: 2em;
+    font-size: 2.3em;
     margin: 0.25em 0;
     padding: 0;
+    font-weight: normal;
   }
 
   h5 {
     font-size: 1.66666666667em;
-    font-weight: 300;
+    font-weight: normal;
   }
 
   &Header {
