--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -1,14 +1,16 @@
 .vpdb-WorkshopExercises {
   h3 {
-    font-size: 2em;
+    font-size: 2.3em;
     margin: 0.25em 0;
     padding: 0;
+    font-weight: normal;
   }
 
   h5 {
     font-size: 1.66666666667em;
     margin-top: 0;
     margin-bottom: 0.75rem;
+    font-weight: normal;
   }
 
   &Header {
