Do not add "A VEuPathDB Project" to a collapsed header

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -54,6 +54,10 @@ body.vpdb-Body {
           color: white;
         }
 
+        .ebrc-HeaderProjectBranding {
+          display: none;
+        }
+
         .ebrc-FooterSocialMediaLinks {
           display: none;
         }
