--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -79,7 +79,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      flex: 1 0;
+      flex: 1 0 8em;
       padding: 0 1em;
 
       padding-bottom: 0.5em;
