--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -1,12 +1,12 @@
 .vpdb-WorkshopExercises {
-  h3 {
+  h2 {
     font-size: 2.3em;
     margin: 0.25em 0;
     padding: 0;
     font-weight: normal;
   }
 
-  h5 {
+  h3 {
     font-size: 1.66666666667em;
     margin-top: 0;
     margin-bottom: 0.75rem;
@@ -47,7 +47,7 @@
         list-style: none;
       }
 
-      a {
+      h3, a {
         color: white;
       }
 
