--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -1,14 +1,15 @@
 .vpdb-FeaturedTools {
+  position: relative;
   color: #00304c;
-  
-  h3 {
+
+  h2 {
     font-size: 2.3em;
-    margin: 0.25em 0;
+    margin-bottom: 0.25em;
     padding: 0;
     font-weight: normal;
   }
 
-  h5 {
+  h3 {
     font-size: 1.66666666667em;
     font-weight: normal;
   }
