--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -27,11 +27,12 @@ body.vpdb-Body {
       .vpdb-Header {
         background-image: $bckgrnd-img;
         background-size: cover;
+        background-position: center;
 
         .ebrc-HeaderBranding {
           position: relative;
           bottom: 42px;
-          height: calc(62px * 1.2);
+          height: calc(70px * 1.2);
 	  content: $logo;
         }
 
