--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -394,7 +394,7 @@ body.vpdb-Body {
     }
 
     &__home.vpdb-RootContainer__news-collapsed {
-      grid-template-columns: 31em 1fr auto;
+      grid-template-columns: 31em 1fr 5.5em;
     }    
 
   }
