center image in eupath too

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -355,6 +355,7 @@ body.vpdb-Body {
       .vpdb-Header {
         background-image: url('~site/images/VEuPathDB/veupathdb-banner.jpg');
         background-size: cover;
+        background-position: center;
 
         .ebrc-HeaderBranding {
           position: relative;
