--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -92,7 +92,7 @@ body.vpdb-Body {
           display: none;
         }
       }
-    
+
       &__collapsed {
         height: 4.0625rem;
         padding: 10px 20px;
@@ -166,6 +166,22 @@ body.vpdb-Body {
       }
     }
 
+    .wdk-Showcase {
+      margin: 0
+    }
+    .News-Section .News .NewsList {
+      max-height: 145px;
+      border-color: rgba(15,70,100,.12);
+      border-style: solid;
+      border-width: 1px 0;
+    }
+    .News-Section .News .NewsList .NewsTeaser{
+      display: none;
+    }
+    .News-Section .AllNewsLink {
+      font-size: 110%;
+    }
+
     .vpdb-Announcements {
       grid-area: banner;
     }
@@ -186,6 +202,22 @@ body.vpdb-Body {
           }
         }
       }
+      
+      .wdk-RealTimeSearchBox__withHelp {
+        margin-left: 0;
+        width: calc(100% - 1em);
+  
+        .wdk-RealTimeSearchBoxInput {
+          padding-left: 2.50em;
+        }
+
+      }
+    
+      .wdk-CheckboxTreeList .wdk-CheckboxTreeItem__leaf .wdk-CheckboxTreeNodeContent i {
+        margin-left: 0.8em;
+        font-size: 0.7em;
+        color: black;
+      } 
     }
 
     .vpdb-Main {
