--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -216,7 +216,7 @@ body.vpdb-Body {
       .wdk-CheckboxTreeList .wdk-CheckboxTreeItem__leaf .wdk-CheckboxTreeNodeContent i {
         margin-left: 0.8em;
         font-size: 0.7em;
-        color: black;
+        color: grey;
       } 
     }
 
