--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -212,9 +212,17 @@ body.vpdb-Body {
         }
 
       }
-    
+   
+      .wdk-CheckboxTree > .wdk-CheckboxTreeList > .wdk-CheckboxTreeItem > .wdk-CheckboxTreeList {
+        padding-left: 0.5em;
+      }
+
+      .wdk-CheckboxTreeList .wdk-CheckboxTreeItem__leaf .wdk-CheckboxTreeNodeContent {
+        margin-left: 0.2em;
+      }
+
       .wdk-CheckboxTreeList .wdk-CheckboxTreeItem__leaf .wdk-CheckboxTreeNodeContent i {
-        margin-left: 0.8em;
+        //margin-left: 0.8em;
         font-size: 0.7em;
         color: grey;
       } 
