--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -106,7 +106,7 @@ body.vpdb-Body {
 
           button {
             line-height: normal;
-            padding: 2x 6px;
+            padding: 2px 6px;
           }
         }
 
