--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -34,6 +34,11 @@ body.vpdb-Body {
         height: 85px;
       }
 
+      .ebrc-HeaderBrandingContainer {
+        position: relative;
+        bottom: 1em;
+      }
+
       &__collapsed {
         .ebrc-HeaderBranding {
           height: 48px;
@@ -355,8 +360,8 @@ body.vpdb-Body {
     // bckgrnd light 
     &.PlasmoDB {
       $primary-color: #985c86;
-      $bckgrnd-img: url('~site/images/PlasmoDB/banner-plasmo.jpg');
-      $logo: url('~site/images/PlasmoDB/title_s.png'); 
+      $bckgrnd-img: url('~site/images/PlasmoDB/header-plasmoDB.jpg');
+      $logo: url('~site/images/PlasmoDB/plasmoDB.png'); 
       @include branding-style($primary-color, $bckgrnd-img, $logo);
     }
  
@@ -371,8 +376,8 @@ body.vpdb-Body {
     // eupath bkgrnd 
     &.ToxoDB {
       $primary-color: #569551;
-      $bckgrnd-img: url('~site/images/EuPathDB/veupathdb-banner.jpg');
-      $logo: url('~site/images/ToxoDB/toxo.png');
+      $bckgrnd-img: url('~site/images/ToxoDB/header-toxoDB.jpg');
+      $logo: url('~site/images/ToxoDB/toxoDB.png');
       @include branding-style($primary-color, $bckgrnd-img, $logo);
     }
 
@@ -395,8 +400,8 @@ body.vpdb-Body {
     // bckgrnd dark 
     &.VectorBase {
       $primary-color: #115781;
-      $bckgrnd-img: url('~site/images/VectorBase/banner-vb.jpg');
-      $logo: url('~site/images/VectorBase/vb-logo-full.png');
+      $bckgrnd-img: url('~site/images/VectorBase/header-vectorbase.jpg');
+      $logo: url('~site/images/VectorBase/vectorbase.png');
       @include branding-style($primary-color, $bckgrnd-img, $logo);
     }
 
