Update header menu content based on UX feedback

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -148,6 +148,12 @@ body.vpdb-Body {
         font-weight: bold;
       }
 
+      .vpdb-CommunitySocialMediaLink {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-gap: 0.25em;
+      }
+
       .wdk-CategoriesCheckboxTreeWrapper {
         position: relative;
         
