--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -259,7 +259,7 @@ body.vpdb-Body {
       grid-area: side;
 
       @media screen and (min-width: 1001px) {
-        border-left: 0.0625rem solid;
+        border-left: 0.0625rem transparent;
 
         .wdk-Showcase-HeadingRow {
           display: none;
@@ -452,7 +452,7 @@ body.vpdb-Body {
     }
 
     &__home.vpdb-RootContainer__news-collapsed {
-      grid-template-columns: 31em 1fr 5.5em;
+      grid-template-columns: 31em 1fr 3em;
     }    
 
   }
