Make "Read More" for Featured Tools description more prominent

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -154,6 +154,8 @@
       }
       
       &ReadMore {
+        font-size: 1.1em;
+        font-weight: bold;
         position: absolute;
         left: 0;
         bottom: 0;
