Add Read More link to the top of an expanded Featured Tools description

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -172,6 +172,10 @@
           padding-left: 0;
           background-image: unset;
         }
+
+        &__top {
+          padding-top: 0;
+        }
       }
     }
   }
