--- a/Site/webapp/css/AllApiSites.css
+++ b/Site/webapp/css/AllApiSites.css
@@ -31,6 +31,12 @@ header {
 
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+           =Answer page (all datasets table)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.MesaComponent .DataTable .DataTable-Sticky .DataTable-Header {
+  top: 5em;;
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       = Results Table: Boolean and Leaf transcript Filters
